--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,7 +15,8 @@
         android:textSize="25sp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        android:textColor="#000"/>
 
     <TextView
         android:id="@+id/welcome"
@@ -25,7 +26,8 @@
         android:layout_marginTop="50dp"
         android:layout_marginRight="20dp"
         android:text="@string/welcome"
-        app:layout_constraintTop_toBottomOf="@id/title_welcome" />
+        app:layout_constraintTop_toBottomOf="@id/title_welcome"
+        android:textColor="#000"/>
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/start"
@@ -37,7 +39,22 @@
         android:text="@string/start"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/welcome" />
+        app:layout_constraintTop_toBottomOf="@id/welcome"
+        android:textColor="#000"/>
+
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/history"
+        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
+        app:icon="@drawable/ic_reply_24px"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/history"
+        app:layout_constraintStart_toStartOf="parent"
+        android:layout_marginStart="20dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_goneMarginBottom="20dp"
+
+        android:textColor="#000"/>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
