add theme (does not work)

--- a/app/src/main/res/layout/activity_form.xml
+++ b/app/src/main/res/layout/activity_form.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Activities.FormActivity">
+    tools:context=".Activities.FormActivity"
+    android:background="@android:color/lightCo">
 
     <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
@@ -15,7 +16,7 @@
             android:layout_height="wrap_content"
             app:menu="@menu/menu"
             app:title="Gnoosic"
-            app:titleTextColor="#fff" />
+            app:titleTextColor="@color/colorBackground" />
 
     </com.google.android.material.appbar.AppBarLayout>
 
@@ -55,7 +56,7 @@
             android:layout_marginTop="40dp"
             android:text="@string/teach_gnod"
             android:textAlignment="center"
-            android:textColor="@android:color/black"
+            android:textColor="@color/colorPrimary"
             android:textSize="25sp" />
 
         <androidx.appcompat.widget.AppCompatAutoCompleteTextView
@@ -64,7 +65,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="64dp"
             android:hint="@string/one_of_my_fav_band"
-            android:textColor="#000" />
+            android:textColor="@color/colorPrimaryDark" />
 
         <androidx.appcompat.widget.AppCompatAutoCompleteTextView
             android:id="@+id/fav2"
@@ -72,7 +73,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="32dp"
             android:hint="@string/one_of_my_fav_band"
-            android:textColor="#000" />
+            android:textColor="@color/lightColorPrimaryDark" />
 
         <androidx.appcompat.widget.AppCompatAutoCompleteTextView
             android:id="@+id/fav3"
@@ -80,7 +81,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="32dp"
             android:hint="@string/one_of_my_fav_band"
-            android:textColor="#000" />
+            android:textColor="@color/colorPrimaryDark" />
     </LinearLayout>
 
     <com.google.android.material.button.MaterialButton
@@ -93,6 +94,6 @@
         android:layout_marginEnd="40dp"
         android:layout_marginBottom="50dp"
         android:text="@string/continue_button_text"
-        android:textColor="#000"
-        app:strokeColor="#000" />
+        android:textColor="@color/colorPrimaryDark"
+        app:strokeColor="@color/colorPrimaryDark" />
 </RelativeLayout>
