--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -70,6 +70,17 @@
             android:text="Mood"
             android:textColor="#777"
             app:strokeColor="#777" />
+
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/start_preferences"
+            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginTop="50dp"
+            android:text="preferences"
+            android:textColor="#777"
+            app:strokeColor="#777" />
     </LinearLayout>
 
     <com.google.android.material.button.MaterialButton
