--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#212121</color>
-    <color name="colorPrimaryDark">#000000</color>
-    <color name="colorAccent">#C00000</color>
+    <!-- Light theme -->
+    <color name="lightColorPrimary">#212121</color>
+    <color name="lightColorPrimaryDark">#000000</color>
+    <color name="lightColorAccent">#C00000</color>
+    <color name="lightColorBackground">#FFFFFF</color>
+
+    <!-- Dark theme -->
+    <color name="darkColorPrimary">#FFFFFF</color>
+    <color name="darkColorPrimaryDark">#CCCCCC</color>
+    <color name="darkColorAccent">#C00000</color>
+    <color name="darkColorBackground">#2B2B2B</color>
+
+    <!-- Ultra Dark theme -->
+    <color name="ultraDarkColorPrimary">#FFFFFF</color>
+    <color name="ultraDarkColorPrimaryDark">#FFFFFF</color>
+    <color name="ultraDarkColorAccent">#C00000</color>
+    <color name="ultraDarkColorBackground">#000000</color>
+
+    <!-- Unicorn theme -->
+    <color name="unicornColorPrimary">#501040</color>
+    <color name="unicornColorPrimaryDark">#301020</color>
+    <color name="unicornColorAccent">#EB15B5</color>
+    <color name="unicornColorBackground">#FAFAC8</color>
 </resources>
