--- a/app/src/main/res/layout/activity_form.xml
+++ b/app/src/main/res/layout/activity_form.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".Activities.FormActivity"
-    android:background="@android:color/lightCo">
+    android:background="@color/lightColorBackground">
 
     <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
@@ -16,7 +16,7 @@
             android:layout_height="wrap_content"
             app:menu="@menu/menu"
             app:title="Gnoosic"
-            app:titleTextColor="@color/colorBackground" />
+            app:titleTextColor="@color/lightColorBackground" />
 
     </com.google.android.material.appbar.AppBarLayout>
 
@@ -56,7 +56,7 @@
             android:layout_marginTop="40dp"
             android:text="@string/teach_gnod"
             android:textAlignment="center"
-            android:textColor="@color/colorPrimary"
+            android:textColor="@color/lightColorPrimary"
             android:textSize="25sp" />
 
         <androidx.appcompat.widget.AppCompatAutoCompleteTextView
@@ -65,7 +65,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="64dp"
             android:hint="@string/one_of_my_fav_band"
-            android:textColor="@color/colorPrimaryDark" />
+            android:textColor="@color/lightColorPrimaryDark" />
 
         <androidx.appcompat.widget.AppCompatAutoCompleteTextView
             android:id="@+id/fav2"
@@ -81,7 +81,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="32dp"
             android:hint="@string/one_of_my_fav_band"
-            android:textColor="@color/colorPrimaryDark" />
+            android:textColor="@color/lightColorPrimaryDark" />
     </LinearLayout>
 
     <com.google.android.material.button.MaterialButton
@@ -94,6 +94,6 @@
         android:layout_marginEnd="40dp"
         android:layout_marginBottom="50dp"
         android:text="@string/continue_button_text"
-        android:textColor="@color/colorPrimaryDark"
-        app:strokeColor="@color/colorPrimaryDark" />
+        android:textColor="@color/lightColorPrimaryDark"
+        app:strokeColor="@color/lightColorPrimaryDark" />
 </RelativeLayout>
