--- a/app/src/main/res/layout/activity_history.xml
+++ b/app/src/main/res/layout/activity_history.xml
@@ -39,4 +39,15 @@
         android:dividerHeight="1dp"
         app:layout_constraintTop_toBottomOf="@+id/saved_artist" />
 
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/clear_history"
+        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="16dp"
+        android:text="@string/clear_history"
+        android:textColor="#777"
+        app:strokeColor="#777"
+        android:layout_gravity="center_horizontal"/>
+
 </LinearLayout>
