--- a/app/src/main/res/layout/activity_history.xml
+++ b/app/src/main/res/layout/activity_history.xml
@@ -28,16 +28,21 @@
         android:layout_marginBottom="30dp"
         android:src="@drawable/band_icon" />
 
-    <ListView
-        android:id="@+id/lv_history"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginEnd="20dp"
-        android:divider="#888"
-        android:dividerHeight="1dp"
-        app:layout_constraintTop_toBottomOf="@+id/saved_artist" />
+        android:layout_weight="9">
+        <ListView
+            android:id="@+id/lv_history"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginStart="20dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginEnd="20dp"
+            android:divider="#888"
+            android:dividerHeight="1dp"
+            app:layout_constraintTop_toBottomOf="@+id/saved_artist" />
+    </LinearLayout>
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/clear_history"
@@ -48,7 +53,13 @@
         android:text="@string/clear_history"
         android:textColor="#777"
         app:strokeColor="#777"
-        android:layout_gravity="bottom|center_horizontal"
-        />
+        android:layout_gravity="bottom|center_horizontal"/>
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Long click on a band to delete"
+        android:textColor="#AAA"
+        android:layout_gravity="center_horizontal"/>
 
 </LinearLayout>
